# mckernel

./: .gitignore  .gitmodules  CMakeLists.txt  FJSVxosmck  FJSVxosmck.service  KNOWN_BUGS.md  Makefile.in  NEWS.md  README.md  README.rst  Readme.md  boot-attached-mic.sh.in  config.h.in  configure  configure.ac  groups  ihk  make.sh  project.config
executer/kernel/mcctrl/: CMakeLists.txt  Makefile.in  binfmt_mcexec.c  config.h.in  control.c  driver.c  futex.c  ikc.c  mc_plist.c  mcctrl.h  mcctrl_public.h  procfs.c  syscall.c  sysfs.c  sysfs.h  sysfs_files.c  sysfs_msg.h
executer/kernel/mcctrl/arch/arm64/: Makefile.in  archdeps.c  cpu.c
executer/kernel/mcctrl/arch/arm64/include/: arch-lock.h  archdeps.h
executer/kernel/mcctrl/arch/arm64/include/tofu/: tof_icc.h  (+5 more)
executer/kernel/mcctrl/arch/x86_64/: Makefile.in  archdeps.c  cpu.c
executer/kernel/mcctrl/arch/x86_64/include/: arch-lock.h  archdeps.h
executer/kernel/mcctrl/include/: cpu.h  futex.h  mc_plist.h  refcount.h
executer/kernel/mcoverlayfs/: CMakeLists.txt  Makefile.in  overlayfs.h  super.c
executer/kernel/mcoverlayfs/linux-3.10.0-327.36.1.el7/: CMakeLists.txt  copy_up.c  dir.c  inode.c  overlayfs.h  readdir.c  super.c
executer/kernel/mcoverlayfs/linux-4.0.9/: inode.c
executer/kernel/mcoverlayfs/linux-4.18.14/: CMakeLists.txt  Makefile.in  copy_up.c  dir.c  export.c  inode.c  namei.c  super.c  util.c
executer/kernel/mcoverlayfs/linux-4.6.7/: Makefile.in  copy_up.c  dir.c  inode.c  overlayfs.h  super.c
executer/user/: CMakeLists.txt  Makefile  Makefile.in  archdep.h  archdep_uti.h  eclair.c  eclair.h  ldump2mcdump.c  libqlfort.c  libsched_yield.c  mcexec.1in  mcexec.c  mcexec.sh.in  mcinspect.c  mcps.in  md5.c  ql_mpiexec_start.c  ql_server.c  ql_talker.c  qlmpilib.c  syscall_intercept.c  vmcore2mckdump.in
executer/user/arch/arm64/: Makefile.in  arch-eclair.c  arch_args.h  arch_syscall.c  archdep.S  archdep.c  archdep_c.c
executer/user/arch/arm64/include/: arch-eclair.h  arch-ldump2mcdump.h
executer/user/arch/x86_64/: Makefile.in  arch-eclair.c  arch_args.h  arch_syscall.c  archdep.S  archdep_c.c
executer/user/arch/x86_64/include/: arch-eclair.h  arch-ldump2mcdump.h
executer/user/lib/: CMakeLists.txt
executer/user/lib/libdwarf/: CMakeLists.txt
kernel/: CMakeLists.txt  Makefile  Makefile.build  Makefile.build.dcfa  Makefile.build.dcfa.public  Makefile.build.in  Makefile.build.mpiu  Makefile.dcfa  Makefile.dcfa.in  Makefile.in  Makefile.mpiu  ap.c  cbuf.c  chip.c  cls.c  copy.c  debug.c  devobj.c  file_ops.c  fileobj.c  freeze.c  futex.c  gencore.c  host.c  hugefileobj.c  init.c  knf.lds  listeners.c  llist.c  lttng.c  mee.lds  mem.c  memobj.c  mikc.c  pager.c  plist.c  process.c  procfs.c  profile.c  rbtree.c  (+13 more)
kernel/config/: builtin-mic.lds  builtin-x86.lds  config.attached-mic  config.builtin-mic  config.builtin-x86  config.smp-arm64.in  config.smp-x86  smp-arm64_type1.lds  smp-arm64_type1.lds.in  smp-arm64_type2.lds  smp-arm64_type2.lds.in  smp-arm64_type3.lds  smp-arm64_type3.lds.in  smp-arm64_type4.lds  smp-arm64_type4.lds.in  smp-x86.lds  smp-x86.lds.in
kernel/configs/: config.knf
kernel/include/: affinity.h  amemcpy.h  asm.h  auxvec.h  cbuf.h  cls.h  config.h.in  debug.h  elfcore.h  elfcoregpl.h  futex.h  generic-rlimit.h  hash.h  init.h  jhash.h  kmalloc.h  kmsg.h  kref.h  llist.h  lttng.h  mc_jhash.h  memobj.h  mman.h  page.h  pager.h  plist.h  process.h  profile.h  rbtree.h  rbtree_augmented.h  rlimit.h  rusage.h  rusage_private.h  shm.h  swapfmt.h.in  syscall.h  sysfs.h  time.h  timer.h  uio.h  (+4 more)
kernel/include/hfi1/: chip.h  chip_registers.h  common.h  file_ops.h  hfi.h  hfi1_generated_ctxtdata.h  hfi1_generated_devdata.h  hfi1_generated_filedata.h  hfi1_generated_hfi1_user_sdma_pkt_q.h  hfi1_generated_pportdata.h  hfi1_generated_sdma_engine.h  hfi1_generated_sdma_state.h  hfi1_generated_structs.h  hfi1_generated_user_sdma_request.h  hfi1_generated_user_sdma_txreq.h  hfi1_user.h  ihk_hfi1_common.h  iowait.h  sdma.h  sdma_txreq.h  user_exp_rcv.h  user_sdma.h
kernel/include/lwk/: compiler-gcc.h  compiler-gcc4.h  compiler.h  futex.h  stddef.h
kernel/include/tofu/: generate_headers.sh  tof_core_bg_reg.h  tof_core_cq_reg.h  tof_icc.h  tof_uapi.h  tof_utofu_bg_bch.h  tof_utofu_cq_trans.h  tofu_generated-tof_core_bg.h  tofu_generated-tof_core_cq.h  tofu_generated-tof_utofu_bg.h  tofu_generated-tof_utofu_cq.h  tofu_generated-tof_utofu_device.h  tofu_stag_range.h
kernel/script/: dwarf-extract-struct.c  mkimage.attached-mic  mkimage.builtin-mic  mkimage.builtin-x86  regenerate_hfi1_header.sh
kernel/scripts/: mkimage.mee
kernel/tofu/: tof_utofu_main.c
test/issues/1458/: C1458.sh  C1458T01.c  C1458T01.sh.in  C1458T02.c  C1458T02.sh.in  C1458T03.c  C1458T03.sh.in  CMakeLists.txt  Makefile  README  aarch64.conf  common.sh.in  regression_test.sh  x86_64.conf
test/issues/1470/: CMakeLists.txt  README
test/issues/1470/include/: okng.h
test/issues/1470/src/: OMPI_MCA_plm_ple_memory_allocation_policy01.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy02.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy03.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy04.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy05.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy06.sh.in  OMPI_MCA_plm_ple_memory_allocation_policy07.sh.in  check_mempolicy.c  zoneinfo.awk  zoneinfo_filter.awk
test/issues/1473/: CMakeLists.txt  README  XTP_001.c  XTP_002.c  XTP_003.c  XTP_004.c  XTP_005.c  XTP_006.c  XTP_007.c  XTP_008.c  XTP_009.c  XTP_010.c  XTP_011.c  aarch64.conf  common.sh.in  huge_page_xpmem.c  ihk_kmsg_size.patch  large_page.patch  multi_vmr_xpmem.c  okng.h  util.h  util.sh.in  x86_64.conf  xpmem_attach01.c  xpmem_attach01.sh.in  xpmem_attach02.c  xpmem_attach02.sh.in  xpmem_attach03.sh.in  xpmem_make01.c  xpmem_make01.sh.in
test/uti/libuti/: CMakeLists.txt  README
test/uti/libuti/src/: uti_pthread_create01.c  uti_pthread_create01.sh.in
tools/crash/: CMakeLists.txt  README  mckernel.c  mckernel.mk  mckernel.mk.in
tools/mcstat/: CMakeLists.txt  Makefile.in  a.out  mcstat.1in  mcstat.c  runtest.c
(+2292 files in other folders)
